--- a/static/styles.css
+++ b/static/styles.css
@@ -108,12 +108,13 @@ tr:hover {
     background-color: #f1f1f1;
 }
 
-/* File Status Messages */
-#tasa_file_status, #deuda_file_status {
-    font-size: 0.9rem;
+/* File Status Messages  -  Para Tasas y Deuda y Fecha */
+#tasa_file_status, #deuda_file_status, #date_status {
+    font-size: 1.4rem;
     color: #27ae60;
     margin-top: 10px;
 }
+
 
 /* Footer Styles */
 .footer {
