Modificado leyenda exportar a Excel

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         {% if data %}
             <h2>Cálculo realizado: Valor nominal de la deuda, Intereses compensatorios y Deuda actualizada</h2>
             <h2>Fecha de Cálculo, inclusive: {{ calc_date }}</h2>
-            <p>Mediante un simple "Copy and Paste" se puede exportar su contenido a una WorkSheet. También, se puede generar una salida a PDF, previo formateo de la página, para su impresión</p>
+            <p>Se puede exportar directamente a una archivo de hoja de cáculo. También, se puede generar una salida a PDF, previo formateo de la página, para su impresión</p>
             <table>
                 <tr>
                     <th>Mes y Año</th>
@@ -109,7 +109,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Exportar a hoja de cálculo. Editar con LibreOffice Calc</button>
+                <button id="exportButton" onclick="exportToExcel()">Exportar a una hoja de cálculo. Editar con LibreOffice Calc o Google Sheets. En MS no funciona, dado que no sería enteramente compatible con Pandas</button>
             </div>
         {% endif %}
 
