--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Exportar a una hoja de cálculo. Editar con LibreOffice Calc o Google Sheets. En MS no funciona, dado que no sería enteramente compatible con Pandas</button>
+                <button id="exportButton" onclick="exportToExcel()">Exportar a una hoja de cálculo. Editar con LibreOffice Calc o Google Sheets. En MS Excel no funciona, dado que no sería enteramente compatible con Pandas</button>
             </div>
         {% endif %}
 
