--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         {% if data %}
             <h2>Cálculo realizado: Valor nominal de la deuda, Intereses compensatorios y Deuda actualizada</h2>
             <h2>Fecha de Cálculo, inclusive: {{ calc_date }}</h2>
-            <p>Se puede exportar directamente a una archivo de hoja de cáculo. También, se puede generar una salida a PDF, previo formateo de la página, para su impresión</p>
+            <p>Se puede exportar directamente a una archivo de hoja de cálculo. También, se puede generar una salida a PDF, previo formateo de la página, para su impresión</p>
             <table>
                 <tr>
                     <th>Mes y Año</th>
@@ -165,6 +165,8 @@
                         document.getElementById('tasa_file_status').innerText = 'A file has been selected.';
                     } else if (formId === 'deudaForm') {
                         document.getElementById('deuda_file_status').innerText = 'A file has been selected.';
+                        // Recargar la página después de procesar el archivo de deuda
+                        window.location.reload();
                     }
 
                     // Focus on the next field if specified
