--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Presiona para exportar a una hoja de cálculo. Editar con LibreOffice Calc o Google Sheets. En MS Excel no funciona, dado que no sería enteramente compatible con la respectiva función de conversión de Pandas</button>
+                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar a una hoja de cálculo editable con LibreOffice Calc o MS-Excel</button>
             </div>
         {% endif %}
 
