Corregido archivo exportado

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar a una hoja de cálculo editable con LibreOffice Calc o MS-Excel</button>
+                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar a una hoja de cálculo editable con LibreOffice Calc o MS-Excel (Excel puede llegar a mostrar un error de apertura)</button>
             </div>
         {% endif %}
 
