--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <audio controls autoplay loop>
-         <source src="{{ url_for('static', filename='Música_Tibetana.ogg') }}" type="audio/ogg">
+         <source src="{{ url_for('static', filename='Música_Tibetana.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
          <p> --  Reproduciendo: Música Barroca.mp3  -- </p>  
