--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
          <source src="{{ url_for('static', filename='Música_Tibetana.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
-         <p> --  Reproduciendo: Música Barroca.mp3  -- </p>  
+         <p> --  Reproduciendo Música Tibetana  -- </p>  
 
     <div class="container">
         <h1>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos</h1>
