--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
          <source src="{{ url_for('static', filename='Música_Tibetana.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
-         <p> --  Reproduciendo Música Tibetana  -- </p>  
-
+          <p> <b> --  Reproduciendo Música Tibetana  -- </b>.</p> 
+          
     <div class="container">
         <h1>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos</h1>
         <p>Herramientas utilizadas: HTML, CSS, Python (librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
