--- a/templates/index.html
+++ b/templates/index.html
@@ -9,27 +9,21 @@
 </head>
 
 <body>
-    
     <audio controls autoplay loop>
          <source src="{{ url_for('static', filename='Música_Tibetana.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
-          <p> <b> --  Reproduciendo Música Tibetana para elevar tu mente a un nivel superior -- </b> </p> 
-      
+          <p> <b> --  Reproduciendo Música Tibetana para elevar tu mente a un nivel superior -- </b> </p>
+    
     <button onclick="window.location.href='{{ url_for('download_file_bonus') }}'">
-    <p> <b> Presiona este botón para descargar un Bonus File: código fuente en Python que genera un Archivo Excel, que contiene los top N archivos más grandes en disco; se debe correr en Python, "find_largest_files.py" </b> </p> 
-    </button>
-    
-    <button onclick="window.location.href='{{ url_for('download_file_tasas') }}'">
-    <p> <b> Presiona este botón para descargar el archivo de Tasas.xlsx, para que puedas ver las tasas y actualizarlas, según corresponda y subirlo a esta misma App </b> </p> 
-    </button>
-    
-    <button onclick="window.location.href='{{ url_for('download_file_deuda') }}'">
-    <p> <b>  Presiona este botón para descargar el archivo Deuda.xlsx, para que lo puedas utilizar como ejemplo para generar tu propio archivo y subirlo a esta misma App </b> </p> 
+    <p> <b> Presiona este botón para descargar un Bonus File: código fuente en Python que genera un Archivo Excel, que contiene los top N archivos más grandes en un drive de tu disco; se debe correr en Python, "find_largest_files.py" </b> </p> 
     </button>  
-    
-     
-        <div class="container">
+          
+    <button onclick="window.location.href='{{ url_for('download_file_tasas') }}'"> 
+    <p> <b> Presiona este botón para descargar el archivo de Tasas_y_Deuda.xlsx, para que puedas ver - a manera de ejemplo - las tasas y la deuda y actualizarlas, según corresponda, para luego subirlos - cada pestaña por separado - a esta misma App </b> </p> 
+    </button> 
+          
+    <div class="container">
         <h1>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos</h1>
         <p>Herramientas utilizadas: HTML, CSS, Python (librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
 
@@ -47,7 +41,7 @@
         <!-- Step 2: Upload Tasa File -->
         <div>
             <h2>Paso 2: Carga el archivo Tasas.xlsx</h2>
-            <p> Los títulos de las 3 columnas deben ser necesariamente:  F_Desde  ,  F_Hasta_Inc. ,  Tasa  y en la fila subsiguiente deben colocarse los datos como se indica en la imagen adjunta. La tasa debe estar expresada en tanto por uno, para 30 días de plazo, el denominador utilizado es siempre 30 días y no hay capitalización de intereses.</p>
+            <p> Los títulos de las 3 columnas deben ser necesariamente:  F_Desde , F_Hasta_Inc. ,  Tasa  y en la fila subsiguiente deben colocarse los datos como se indica en la imagen adjunta; se recomienda bajar el archivo de Tasas_y_Deuda.xlsx. La tasa debe estar expresada en tanto por uno, para 30 días de plazo, el denominador utilizado es siempre 30 días y no hay capitalización de intereses.</p>
             
             <center><img src="{{ 'static/estructura_archivos.JPG' }}" alt="Imagen estructura archivos" width="345" height="60"> </center>
                         
