--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </button>  
           
     <button onclick="window.location.href='{{ url_for('download_file_tasas') }}'"> 
-    <p> <b> Presiona este botón para descargar el archivo de Tasas_y_Deuda.xlsx, para que puedas ver - a manera de ejemplo - las tasas y la deuda y actualizarlas, según corresponda, para luego subirlos - cada pestaña por separado - a esta misma App </b> </p> 
+    <p> <b> Presiona este botón para descargar el archivo de Tasas_y_Deuda.xlsx, para que puedas ver - a manera de ejemplo - las tasas y la deuda y actualizarlas, según corresponda, para luego subirlos - cada pestaña por separado - a esta misma App. También, incluye una muestra del cálculo de intereses realizado  </b> </p> 
     </button> 
           
     <div class="container">
