--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar a una hoja de cálculo editable en LibreOffice Calc o MS-Excel (Excel puede llegar a mostrar un error de apertura, debido a que esta aplicación corre en un server de desarollo, no de producción)</button>
+                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar a una hoja de cálculo editable en LibreOffice Calc o MS-Excel (Excel puede llegar a mostrar un error de apertura, debido a que esta aplicación corre en un server de desarollo (gratuito), no de producción)</button>
             </div>
         {% endif %}
 
