--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar este cálculo a una hoja editable en LibreOffice Calc o MS-Excel (Excel puede llegar a mostrar un error de apertura, debido a que esta aplicación corre en un server de desarollo -gratuito- no de producción; vuelva a intentarlo más tarde)</button>
+                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar este cálculo a una hoja editable en LibreOffice Calc o MS-Excel. Podría aparecer un mensaje de error de apertura, debido a que esta aplicación se está corriendo en un server de desarollo -gratuito- que no es de producción. Vuelve a intentarlo más tarde</button>
             </div>
         {% endif %}
 
