--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
 
             <!-- Export Button -->
             <div>
-                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar este cálculo a una hoja editable en LibreOffice Calc o MS-Excel. Podría aparecer un mensaje de error de apertura, debido a que esta aplicación se está corriendo en un server de desarollo -gratuito- que no es de producción. Vuelve a intentarlo más tarde</button>
+                <button id="exportButton" onclick="exportToExcel()">Presiona este botón para exportar este cálculo a una hoja editable en LibreOffice Calc o MS-Excel. Podría aparecer un mensaje de error de apertura, debido a que esta aplicación se está corriendo en un server de desarollo -gratuito- que no es de producción. Vuelve a intentarlo más tarde. </button>
             </div>
         {% endif %}
 
@@ -150,7 +150,7 @@
 
         <!-- Like Button -->
         <div>
-            <button id="likeButton" onclick="sendLike()">If this app has been useful to you, then I deserve a Like. That's all I wish from you ❤️</button>
+            <button id="likeButton" onclick="sendLike()">If this app has been useful to you, then I deserve - at least - a Like. That's all I wish from you ❤️</button>
             <p id="likes">Likes: {{ likes }}</p>
         </div>
 
