--- a/templates/index.html
+++ b/templates/index.html
@@ -154,11 +154,24 @@
             <p id="likes">Likes: {{ likes }}</p>
         </div>
 
+          
+        <!-- Honor List -->
+        <div>
+            <p>En agradecimiento a la excelente tarea de divulgación y  testing  de esta aplicación, su autor, Vincenzo Natale, otorga - muy merecidamente - una corona de laureles (virtuales),  a los siguientes colaboradores:     </a></p>
+            <p> *   Daniel Arias </p>
+            <p> *   Mauricio La Valle </p>
+            <p> *   . . .  (espacio reservado para otros colaboradores que deseen agregarse a esta lista de honor).  </p>
+            <p> </p>
+        </div>
+        
+        
         <!-- Footer -->
         <div class="footer">
             <p>Contacto: <a href="mailto:vnatale52@gmail.com">Para comentarios, sugerencias, detección de errores, etc., envía un correo electrónico a Vincenzo Natale : vnatale52@gmail.com</a></p>
-            <p>MIT License - Copyright (c) 2025 Vincenzo Natale</p>
-        </div>
+            <p>MIT License - Copyright (c) 2025 Vincenzo Natale</p>  
+
+    
+        
     </div>
 
     <script>
