--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
           
     <div class="container">
         <h1>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos</h1>
-        <p>Herramientas utilizadas: HTML, CSS, Python (librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
+        <p>Herramientas utilizadas: HTML, CSS, Python (sus librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
 
         <!-- Step 1: Set Calculation Date -->
         <div>
