--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
          <source src="{{ url_for('static', filename='indian_music.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
-          <p> <b> --  Reproduciendo Música de la India, para elevar tu mente a un nivel superior -- </b> </p>
+          <p> <b> --  Reproduciendo Música de la India para elevar tu mente a un nivel superior -- </b> </p>
     
     <button onclick="window.location.href='{{ url_for('download_file_bonus') }}'">
     <p> <b> Presiona este botón para descargar un Bonus File: código fuente en Python que genera un Archivo Excel, que contiene los top N archivos más grandes en un drive de tu disco; se debe correr en Python, "find_largest_files.py" </b> </p> 
@@ -25,7 +25,7 @@
           
     <div class="container">
         <h1>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos</h1>
-        <p>Herramientas utilizadas: HTML, CSS, Python (sus librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
+        <p>Herramientas utilizadas: HTML, CSS, Python (librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
 
         <!-- Step 1: Set Calculation Date -->
         <div>
@@ -148,6 +148,16 @@
             </table>
         {% endif %}
 
+           
+        <!-- Honor List -->
+        <div>
+            <p> En agradecimiento a la excelente tarea de divulgación y  testing  de esta aplicación, su autor, Vincenzo Natale, otorga - muy merecidamente - una corona de laureles (virtuales),  a los siguientes colaboradores:  </p>
+            <p> *   Daniel Arias </p>
+            <p> *   Mauricio La Valle </p>
+            <p> *   . . .  (espacio reservado para otros colaboradores que deseen agregarse a esta lista de honor).  </p>
+            <p> </p>
+        </div>
+        
         <!-- Like Button -->
         <div>
             <button id="likeButton" onclick="sendLike()">If this app has been useful to you, then I deserve - at least - a Like. That's all I wish from you ❤️</button>
@@ -157,8 +167,9 @@
         <!-- Footer -->
         <div class="footer">
             <p>Contacto: <a href="mailto:vnatale52@gmail.com">Para comentarios, sugerencias, detección de errores, etc., envía un correo electrónico a Vincenzo Natale : vnatale52@gmail.com</a></p>
-            <p>MIT License - Copyright (c) 2025 Vincenzo Natale</p>
+            <p>MIT License - Copyright (c) 2025 Vincenzo Natale</p>  
         </div>
+        
     </div>
 
     <script>
