--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
          <source src="{{ url_for('static', filename='indian_music.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
-          <p> <b> --  Reproduciendo Música de la India, para elevar tu mente a un nivel superior -- </b> </p>
+          <p> <b> ---  Reproduciendo Música de la India, para elevar tu mente a un nivel superior --- </b> </p>
     
     <button onclick="window.location.href='{{ url_for('download_file_bonus') }}'">
     <p> <b> Presiona este botón para descargar un Bonus File: código fuente en Python que genera un Archivo Excel, que contiene los top N archivos más grandes en un drive de tu disco; se debe correr en Python, "find_largest_files.py" </b> </p> 
