--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
          <source src="{{ url_for('static', filename='indian_music.ogg') }}" type="audio/mpeg">
 		 Your browser does not support the audio element.
     </audio>
-          <p> <b> --- Reproduciendo Música de la India, para elevar tu mente a un nivel superior --- </b> </p>
+          <p> <b> --  Reproduciendo Música de la India, para elevar tu mente a un nivel superior -- </b> </p>
     
     <button onclick="window.location.href='{{ url_for('download_file_bonus') }}'">
     <p> <b> Presiona este botón para descargar un Bonus File: código fuente en Python que genera un Archivo Excel, que contiene los top N archivos más grandes en un drive de tu disco; se debe correr en Python, "find_largest_files.py" </b> </p> 
@@ -151,10 +151,9 @@
            
         <!-- Honor List -->
         <div>
-            <p> En agradecimiento a la excelente tarea de divulgación y  testing  de esta aplicación, su autor, Vincenzo Natale, otorga - muy merecidamente - una corona de laureles (virtuales),  a los siguientes colaboradores:  </p>
-            <p> *   Daniel Arias </p>
+            <p> En agradecimiento a la excelente tarea de divulgación y  testing  de esta aplicación, su autor, Vincenzo Natale, otorga - muy merecidamente - una corona (virtual) de laureles,  a los siguientes colaboradores:  </p>
             <p> *   Mauricio La Valle </p>
-            <p> *   . . .  (espacio reservado para otros colaboradores que deseen agregarse a esta lista de honor).  </p>
+            <p> *   Espacio reservado para otros colaboradores que deseen agregarse a esta lista de honor).  </p>
             <p> </p>
         </div>
         
