--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
         <div>
             <p> En agradecimiento a la excelente tarea de divulgación y  testing  de esta aplicación, su autor, Vincenzo Natale, otorga - muy merecidamente - una corona (virtual) de laureles,  a los siguientes colaboradores:  </p>
             <p> *   Mauricio La Valle </p>
-            <p> *   Espacio reservado para otros colaboradores que deseen agregarse a esta lista de honor).  </p>
+            <p> *   Espacio reservado para otros colaboradores que deseen agregarse a esta lista de honor.  </p>
             <p> </p>
         </div>
         
