--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos de la CABA, AGIP  -  by  Vincenzo Natale">
+    <meta name="description" content=" Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos de la CABA, AGIP  - Mejorada el 12-09-2025 - by  Vincenzo Natale">
     <title>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios - Mejorada el 12-09-2025</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
@@ -25,7 +25,7 @@
           
     <div class="container">
         <h1>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos</h1>
-        <p>Herramientas utilizadas: HTML, CSS, Python (librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek.</p>
+        <p>Herramientas utilizadas: HTML, CSS, Python (librerías Flask y Pandas), Render Web Hosting (que tarda unos segundos), IA ChatGPT y DeepSeek - App mejorada el 12-09-2025.</p>
 
         <!-- Step 1: Set Calculation Date -->
         <div>
@@ -248,4 +248,3 @@
     </script>
 </body>
 </html>
-
