--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" Application para el Cálculo de los Intereses Compensatorios o Resarcitorios (no incluye Intereses Punitorios), para el Impuesto sobre los Ingresos Brutos de la CABA, AGIP  - Mejorada el 12-09-2025 - by  Vincenzo Natale">
-    <title>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios</title>
+    <title>Web Application para el Cálculo de los Intereses Compensatorios o Resarcitorios - Mejorada el 12-09-2025</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
@@ -248,4 +248,3 @@
     </script>
 </body>
 </html>
-
